--- a/testbedserver/testbedserver/templates/base.html
+++ b/testbedserver/testbedserver/templates/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE>
 <html>
 
 <head>
@@ -6,14 +5,8 @@
 </head>
 
 <body>
-    <div id="header">{% block header %}<a href="{% url index %}">Home</a> | 
-        {% if user.is_authenticated %} Welcome, {{ user.username }} 
-        (<a href="{% url auth_logout %}">Logout" %}</a> | 
-        <a href="{% url auth_password_change %}"> Change password</a>)
-	{% else %}
-	<a href="{% url auth_login %}">Login</a>
-	{% endif %}
-        {% endblock %}
+    <div id="header">{% block header %}<a href="{% url index %}">Home</a> | {% if user.is_authenticated %} Welcome, {{ user.username }} (<a href="{% url auth_logout %}">Logout" %}</a> | <a href="{% url auth_password_change %}"> Change password</a>){% else %}
+	<a href="{% url auth_login %}">Login</a>{% endif %}{% endblock %}
     </div>
 
     <div id="content">
