--- a/frontend/styles/stylesheet.css
+++ b/frontend/styles/stylesheet.css
@@ -31,14 +31,14 @@ hr{border:none;height:1px;background-color:#b9b9b9;}
 .color-white,.header-nav,.header-nav-container ul li a
 {color:#FFFFFF;}
 
-.color-dark,h3,#content p,input:focus,.left-nav tr td a{color:#333333;}
+.color-dark,h3,#content p,input:focus,.left-nav tr td a,.add-links{color:#333333;}
 
 .current-selected{font-weight: bolder;}
 
 .float-left,.header-nav-container ul li
 {float:left;}
 
-#progressbar{float:right;width:128px;height:15px;margin-top:10px;margin-right:10px;}
+#progressbar{float:right;width:128px;height:15px;margin-top:10px;margin-right:10px;display:none;}
 
 .cut-left-top-corner,.login-form table tr td input[type=text],.login-form table tr td input[type=password],.login-form table tr td input[type=submit],input[type=reset],.left-nav tr td a,input[type=submit]
 {
@@ -133,7 +133,7 @@ input[type=submit]:hover,input[type=reset]:hover
 .table-list{width:100%;}
 .table-list tr th{padding-top:5px;padding-bottom:5px;color:#ffffff;background-color:#565656;}
 .table-list tr td{padding-top:5px;padding-bottom:5px;border-top:1px solid #b9b9b9;background-color: #eaeaea;}
-
+.add-links:hover{color:#ffffff;background-color:#565656;}
 
 /**tabs**/
 #editingfield{margin-top:20px;,margin-bottom:20px;}
@@ -183,9 +183,10 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  { /*--Makes sure that th
 	clear: both;
 	float: left; width: 100%;
 	background: #fff;
+	margin-bottom:20px;
 }
 .tab_content {
 	padding: 20px;
 }
-.spacer{margin-top:20px;width:100%;height:5px;display:block;}
+
 
