--- a/frontend/styles/stylesheet.css
+++ b/frontend/styles/stylesheet.css
@@ -9,6 +9,8 @@ body{
 a {
 	text-decoration: none;
 }
+img{border:none;}
+table{font-size:13px;}
 
 hr{border:none;height:1px;background-color:#b9b9b9;}
 .head-container {
