--- a/frontend/styles/stylesheet.css
+++ b/frontend/styles/stylesheet.css
@@ -33,7 +33,7 @@ hr{border:none;height:1px;background-color:#b9b9b9;}
 .color-white,.header-nav,.header-nav-container ul li a
 {color:#FFFFFF;}
 
-.color-dark,h3,#content p,input:focus,.left-nav tr td a{color:#333333;}
+.color-dark,h3,#content p,input:focus,.left-nav tr td a,.table-list a{color:#333333;}
 
 .current-selected{font-weight: bolder;}
 
@@ -138,6 +138,7 @@ input[type=submit]:hover,input[type=reset]:hover
 .table-list{width:100%;}
 .table-list tr th{padding-top:5px;padding-bottom:5px;color:#ffffff;background-color:#565656;}
 .table-list tr td{padding-top:5px;padding-bottom:5px;border-top:1px solid #b9b9b9;background-color: #eaeaea;}
+.table-list a:hover{padding-top:5px;padding-bottom:5px;border-top:1px solid #b9b9b9;background-color: #b9b9b9;}
 .add-links{
 	color:#333333;
 	background-image: url(../images/add.png);
@@ -207,3 +208,21 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  { /*--Makes sure that th
 .tab_content input[type=text]{border:1px solid #b9b9b9;height:25px;padding-left:5px;width:248px;}/*background-color: #eaeaea;*/
 .tab_content textarea{height:100px;width:252px;padding:0px;border:1px solid #b9b9b9;;}
 .tab_content select{padding:0px;width:253px;height:25px;}
+
+
+/*nodes**/
+#nodesource .ui-selecting { background: #FECA40; }
+#nodesource .ui-selected { background: #F39814; color: white; }
+#nodesource, #nodeselected { list-style-type: none; margin: 0; padding: 0; width:300px; }
+#nodesource li, #nodeselected li { margin: 1px; padding: 0.4em; font-size: 7px; height: 12px;width:12px;float:left; cursor:pointer;border:1px solid orange;}
+#nodeselected li{background: #F39814;}
+.node-legends,#nos_selected_node{list-style-type: none; margin: 0; padding: 0;}
+.node-legends li{width:30px;height:20px;display:block;border:1px solid orange;position:relative;margin-bottom:2px;}
+.node-legends li span{position:absolute;left:40px;top:2px;width:250px;};
+
+.arrow {width:20px;
+height:20px;display:block;background-color:#0C3;}
+.up { background-position:0px 0px;}
+
+.copyright{color:#565656;font-size:11px;width:100%;text-align:center;}
+.copyright span{margin:auto;display:block;}
