--- a/gae-frontend/war/styles/stylesheet.css
+++ b/gae-frontend/war/styles/stylesheet.css
@@ -87,7 +87,7 @@ hr{border:none;height:1px;background-color:#b9b9b9;}
 .header-nav-container{left:0px; top:0px;height:39px;}
 .header-nav-container ul
 {list-style-type:none;margin:0px;padding:0px;}
-.header-nav-container ul li a{padding:10px;line-height:39px;}
+.header-nav-container ul li a{padding:11px;line-height:39px;}
 .header-nav-container ul li a:hover{background-color:#333333;}
 .logo-container{
 	height:115px;	
@@ -140,7 +140,7 @@ input[type=submit]:hover,input[type=reset]:hover
 .table-list{width:100%;}
 .table-list tr th{padding-top:5px;padding-bottom:5px;color:#ffffff;background-color:#565656;}
 .table-list tr td{padding-top:5px;padding-bottom:5px;border-bottom:1px solid #b9b9b9;background-color: #eaeaea;}
-.table-list a:hover{padding-top:5px;padding-bottom:5px;border-top:1px solid #b9b9b9;background-color: #b9b9b9;}
+.table-list a:hover{padding-top:5px;padding-bottom:5px;background-color: #b9b9b9;}
 .add-links{
 	color:#333333;
 	background-image: url(../images/add.png);
