--- a/gae-frontend/war/styles/stylesheet.css
+++ b/gae-frontend/war/styles/stylesheet.css
@@ -30,14 +30,14 @@ hr{border:none;height:1px;background-color:#b9b9b9;}
 .absolute-position,.header-nav-container
 {position:absolute;}
 
-.color-white,.header-nav,.header-nav-container ul li a
+.color-white,.header-nav,.header-nav-container ul li a,#drop-down li a
 {color:#FFFFFF;}
 
 .color-dark,h3,#content p,input:focus,.left-nav tr td a,.table-list a{color:#333333;}
 
-.current-selected{font-weight: bolder;}
+.current-selected,#drop-down li a{font-weight: bolder;}
 
-.float-left,.header-nav-container ul li
+.float-left,.header-nav-container ul li,#drop-down li
 {float:left;}
 
 #progressbar{float:right;width:128px;height:25px;margin-top:10px;margin-right:10px;display:none;}
@@ -88,7 +88,7 @@ hr{border:none;height:1px;background-color:#b9b9b9;}
 .header-nav-container ul
 {list-style-type:none;margin:0px;padding:0px;}
 .header-nav-container ul li a{padding:11px;line-height:39px;}
-.header-nav-container ul li a:hover{background-color:#333333;}
+.header-nav-container ul li a:hover,#drop-down li a:hover{background-color:#333333;}
 .logo-container{
 	height:115px;	
 	background-image: url(../images/logo.png);
@@ -138,8 +138,9 @@ input[type=submit]:hover,input[type=reset]:hover
 .left-nav .sub-menu-item{padding-left:20px;}
 .left-nav tr td a:hover{padding-left:10px;padding-top:5px;background-color: #eaeaea;height:24px;display:block;width:180px;color:#565656;}
 .table-list{width:100%;}
-.table-list tr th{padding-top:5px;padding-bottom:5px;color:#ffffff;background-color:#565656;}
+.table-list tr th{padding-top:5px;padding-bottom:5px;padding-left:10px;color:#ffffff;background-color:#565656;}
 .table-list tr td{padding-top:5px;padding-bottom:5px;border-bottom:1px solid #b9b9b9;background-color: #eaeaea;}
+
 .table-list a:hover{padding-top:5px;padding-bottom:5px;background-color: #b9b9b9;}
 .add-links{
 	color:#333333;
@@ -147,7 +148,7 @@ input[type=submit]:hover,input[type=reset]:hover
 	background-repeat: no-repeat;
 	background-position: right 5px;
 	padding-top: 5px;
-	padding-right: 20px;
+	padding-right: 30px;
 	padding-bottom: 5px;
 	padding-left: 0px;
 }
@@ -228,3 +229,12 @@ height:20px;display:block;background-color:#0C3;}
 
 .copyright{color:#565656;font-size:11px;width:100%;text-align:center;}
 .copyright span{margin:auto;display:block;}
+/**drop down**/
+
+#drop-down, #drop-down ul { list-style-type:none; margin:0; padding:0;background-color:#565656; }
+
+#drop-down li a{ width:171px;; float:left;padding-top:5px;padding-bottom:5px;padding-left:10px;color:#ffffff;background-color:#565656;}
+#drop-down li ul { display:none; }
+#drop-down .drop-down-bottom{background-image: url(../images/add.png);	background-repeat: no-repeat;	background-position: right 5px;}
+#drop-down li:hover ul { display:block; }
+body { behavior:url("csshover.htc"); }
