--- a/gae-frontend/war/styles/stylesheet.css
+++ b/gae-frontend/war/styles/stylesheet.css
@@ -237,5 +237,5 @@ height:20px;display:block;background-color:#0C3;}
 #drop-down li ul { display:none;position:absolute;left:0px;top:25px;z-index:100;}
 #drop-down .drop-down-bottom{background-image: url(../images/add.png);	background-repeat: no-repeat;background-position: right 5px;}
 #drop-down li:hover ul { display:block; }
-body { behavior:url("csshover.htc"); }
+/*body { behavior:url("csshover.htc"); }*/
 #breadcrumb{color:#565656;padding-top:5px;padding-bottom:10px;font-weight:bold;}
