--- a/api-cotefe-net/templates/openid/login.html
+++ b/api-cotefe-net/templates/openid/login.html
@@ -39,6 +39,6 @@
     
     <img class="logo" src="/images/openid-logo.png" />
     
-    <h2><a class="janrainEngage button" href="#">Login with OpenID</a></h2>
+    <p><a class="janrainEngage button" href="#">Login with OpenID</a></p>
 
 {% endblock %}
