--- a/api-cotefe-net/static/css/cotefe.css
+++ b/api-cotefe-net/static/css/cotefe.css
@@ -9,24 +9,23 @@ body {
 	background-color: #e6e6e6;
 }
 #container {
+	background-color: #cccccc;
 	padding: 0px;
 	margin: auto;
 	width: 900px;
 }
 #header {
 	height: 120px;
-	display: block;
-	text-overflow: ellipsis;
 	margin: 0px;
 	clear: both;
 	padding: 20px;
 	background-color: white;
 }
-
 #header h1 {
+    margin-left: 0px;
+	margin-bottom: 0px;
 	margin-top: 10px;
-	margin-right: 20px;
-	display: block;
+	margin-right: 30px;
 	float: left;
 	padding: 0px;
 	color: #ff8000;
@@ -34,35 +33,43 @@ body {
 	font-weight: bold;
 }
 #header h2 {
-	margin-left: 10px;
+	margin-left: 0px;
 	margin-bottom: 0px;
 	margin-right: 0px;
 	margin-top: 20px;
-	display: block;
 	padding: 0px;
 	font-style: normal;
 	color: #999999;
 	font-size: 20px;
 	font-weight: normal;
 }
+#menubar {
+    margin: 0px;
+    padding: 0px;
+}
 #welcome {
-	clear: left;
-	font-size: 12px;
-	margin: 0px;
-	padding: 10px;
 	float: left;
-}
-#menu {
-	clear: right;
 	font-size: 12px;
 	margin: 0px;
 	padding: 10px;
-	float: right;
 }
-
-#welcome, #container, #menu {
-	display: block;
-	background-color: #cccccc;
+#user-menu {
+	float: right;
+	font-size: 12px;
+	margin: 0px;
+	padding: 10px;
+}
+#explore-menu {
+	float: left;
+	font-size: 15px;
+	margin: 0px;
+	padding: 10px;
+}
+#cotefe-menu {
+	float: right;
+	font-size: 15px;
+	margin: 0px;
+	padding: 10px;
 }
 #content {
 	min-height: 400px;
@@ -116,7 +123,7 @@ body {
 	margin-left: 0px;
 	margin-bottom: 0px;
 	margin-top: 20px;
-	font-size: 13px;
+	font-size: 15px;
 }
 #content table {
 	border-collapse: collapse;
@@ -130,13 +137,15 @@ body {
 	margin-top: 20px;
 }
 #content tr, th, td {
-	widows: 0;
 	border-width: 0px;
 	border-style: none;
 	text-align: left;
 	font-size: 12px;
 	margin: 0px;
 	padding: 10px;
+}
+#content td {
+	font-family: monospace;
 }
 #content form {
 	padding: 0px;
@@ -147,10 +156,11 @@ body {
 	font-family: monospace;
 	border-color: #cccccc;
 	border-width: 2px;
-	border-style: dashed;
+	border-style: dotted;
 	font-size: 12px;
 	padding: 5px;
 	margin: 10px;
+	width: 200px;
 }
 #content input[type=submit] {
 	padding: 0px;
@@ -163,7 +173,6 @@ body {
 #footer {
 	text-align: center;
 	margin: 0px;
-	background-color: #cccccc;
 	padding: 10px;
 }
 #footer p {
