--- a/api-cotefe-net/static/css/cotefe.css
+++ b/api-cotefe-net/static/css/cotefe.css
@@ -1,6 +1,6 @@
 body, h1, h2, h3, h4, h5, h6, p, td, th, form, input {
 	font-size: 13px;
-	color: #191919;
+	color: #333333;
 	font-family: Asap, sans-serif;
 	padding: 0px;
 	margin: 0px;
@@ -43,44 +43,21 @@ body {
 	font-weight: normal;
 }
 #menubar {
-    min-height: 60px;
-    height: 60px;
+    height: 15px;
     background-color: #ffcc66;
     margin: 0px;
-    padding: 0px;
+    padding: 10px;
 }
 #welcome {
-	margin-left: 10px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-top: 10px;
+	margin: 0px;
 	float: left;
 	font-size: 12px;
 	padding: 0px;
 }
-#user-menu {
-	margin-left: 10px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-top: 10px;
+#menu {
+	margin: 0px;
 	float: right;
 	font-size: 12px;
-	padding: 0px;
-}
-#explore-menu {
-	margin-left: 10px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-top: 0px;
-	float: left;
-	padding: 0px;
-}
-#cotefe-menu {
-	margin-left: 10px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-top: 0px;
-	float: right;
 	padding: 0px;
 }
 #content {
@@ -215,11 +192,30 @@ body {
 	float: right;
 	width: 80px;
 }
-#footer {
+#cotefe {
+	background-color: #cccccc;
+	font-size: 13px;
+	height: 160px;
+	padding: 10px;
+	margin: 0px;
+}
+#cotefe ul {
+	margin: 0px;
+	float: left;
+	width: 220px;
+	padding: 0px;
+}
+#cotefe li {
+	list-style-type: none;
+	padding: 5px;
+	margin: 0px;
+}
+#copyright {
+	clear: both;
 	text-align: center;
 	margin: 0px;
 	padding: 10px;
 }
-#footer p {
+#copyright p {
 	font-size: 12px;
 }
