--- a/api-cotefe-net/templates/base.html
+++ b/api-cotefe-net/templates/base.html
@@ -34,7 +34,7 @@
     
         <div id="menu">
         
-            <a href="/home">Home</a> | 
+            Home | 
         
             {% if user %}
     
@@ -42,7 +42,7 @@
             
             {% endif %}
             
-            <a href="/docs">Documentation</a> | <a href="#">Help</a>
+            <a href="/docs">Documentation</a> | Help
             
             {% if user %}
     
