--- a/api-cotefe-net/templates/base.html
+++ b/api-cotefe-net/templates/base.html
@@ -74,7 +74,7 @@
         
         <ul>
             <li><b>Explore</b></li>
-            <li>{% if user.admin %}<a href="/explore/users">Users</a>{% endif %}</li>
+            {% if user.admin %}<li><a href="/explore/users">Users</a></li>{% endif %}
             <li><a href="/explore/testbeds">Testbeds</a></li>
             <li><a href="/explore/platforms">Platforms</a></li>
             <li>Sensors</li>
