--- a/web-cotefe-net/css/stylesheet.css
+++ b/web-cotefe-net/css/stylesheet.css
@@ -32,7 +32,7 @@ article h3,#header nav a{color:#dc7621;}
 
 .top-nav{height:40px;background-color:#dc7621;border-bottom: 1px solid #ccc;padding-top:1px;}/**border: 1px solid #2D2D2D;*/
 .top-border div h3{ margin-top:8px;padding-left:200px;color:#eaeaea;font-weight:normal;font-size:20px;}	
-.top-border div h3 span{color:#203b5c;}
+.top-border div h3 span{text-transform : capitalize;color:#203b5c;}
 .exp-set{padding-bottom:20px;}
 
 
