cross domain by POST

--- a/web-cotefe-net/templates/tableModel.ejs
+++ b/web-cotefe-net/templates/tableModel.ejs
@@ -6,7 +6,8 @@
 	</tr>
 	<% if(objects.length>0)
 		{
-				len=(objects.length>numberOfItems?numberOfItems:objects.length);
+				
+				len=(objects.length>row?row:objects.length);
 				
 				
 				for(i=0; i<len; i++) {%>
