--- a/web-cotefe-net/templates/projectNew.ejs
+++ b/web-cotefe-net/templates/projectNew.ejs
@@ -4,6 +4,7 @@
 	<form action="" id="projectform">
 		<input type="hidden" value="<%= uri %>" name="uri" id="uri"/>
 		<input type="hidden" value="<%= type %>" name="type" />
+		<input type="hidden" value="<%= sessionvar %>" name="session" />
 		 <p>
             <label for="name">Project Name</label>
             <input class="input-small" type="text" value="<%= name %>" name="name" id="name" placeholder="Project Hello"/>
