--- a/api-cotefe-net/templates/base.html
+++ b/api-cotefe-net/templates/base.html
@@ -74,24 +74,30 @@
         
         <ul>
             <li><b>Explore</b></li>
-            {% if user.admin %}<li><a href="/explore/users">Users</a></li>{% endif %}
+            <li><a href="/explore/users">Users</a></li>
             <li><a href="/explore/testbeds">Testbeds</a></li>
             <li><a href="/explore/platforms">Platforms</a></li>
             <li>Sensors</li>
             <li>Actuators</li>
+            <li>Interfaces</li>
         </ul>
         
         <ul>
             <li><b>Experiment</b></li>
+            <li>Images</li>
             <li>Property Sets</li>
             <li>Virtual Nodes</li>
             <li>Virtual Node Groups</li>
             <li>Virtual Tasks</li>
-            <li>Images</li>
+            <li>--</li>
+            <li>--</li>
+            
         </ul>
         
         <ul>
             <li><b>Job</b></li>
+            <li>--</li>
+            <li>--</li>
             <li>Nodes</li>
             <li>Node Groups</li>
             <li>Tasks</li>
