--- a/web-cotefe-net/templates/greetTemplate.ejs
+++ b/web-cotefe-net/templates/greetTemplate.ejs
@@ -1,1 +1,1 @@
-<div><h3>Hello, <span id="currentUser"><%= name %></span> Welcome to COTEFE</h3></div>	
+<div><h3>Hello, <span id="currentUser"><%= username %></span> Welcome to COTEFE</h3></div>	
