--- a/api-cotefe-net/templates/applications.html
+++ b/api-cotefe-net/templates/applications.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<img class="logo" src="/images/oauth2-logo.png" />
+
     <form method="post">
        <table>
            <tr>
