--- a/api-cotefe-net/templates/docs.html
+++ b/api-cotefe-net/templates/docs.html
@@ -7,10 +7,10 @@
     <h2>COTEFE API Endpoints</h2>
     
     <h3>OpenID (<a href="http://openid.net/">more info</a>)</h3>
-    <p>OpenID Login Endpoint: <a href="http://api.cotefe.net/openid/login">http://api.cotefe.net/openid/login</a></p>
+    <p>OpenID Login Endpoint: <a href="https://api.cotefe.net/openid/login">https://api.cotefe.net/openid/login</a></p>
     
     <h3>OAuth2 (<a href="http://oauth.net/2/">more info</a>)</h3>
-    <p>OAuth2 Authorization Endpoint: <a href="http://api.cotefe.net/oauth2/auth">http://api.cotefe.net/oauth2/auth</a></p>
-    <p>OAuth2 Access Token Endpoint: <a href="http://api.cotefe.net/oauth2/token">http://api.cotefe.net/oauth2/token</a></p>
+    <p>OAuth2 Authorization Endpoint: <a href="https://api.cotefe.net/oauth2/auth">https://api.cotefe.net/oauth2/auth</a></p>
+    <p>OAuth2 Access Token Endpoint: <a href="https://api.cotefe.net/oauth2/token">https://api.cotefe.net/oauth2/token</a></p>
 
 {% endblock %}
