experiment list added

--- a/web-cotefe-net/templates/dashboard.ejs
+++ b/web-cotefe-net/templates/dashboard.ejs
@@ -18,15 +18,7 @@
 								        <%= projecttable %>
 								    </div>
 								    <div id="tab2" class="tab_content">
-								       <table class="shadow-dark">
-								        	<tr><th>Title</th><th>Project</th><th>Date</th><th class="edit-delete-box">Edit</th><th class="edit-delete-box">Delete</th></tr>
-    										<tr><td>Exp1</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Exp2</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Exp3</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Exp4</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Exp5</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Exp6</td><td>Project</td><td>Date</td><td>Edit</td><td>Delete</td></tr>								    
-								        </table>
+								        <%= exptable %>
 								    </div>
 								    <div id="tab3" class="tab_content">
 								       Here comes Job List
