--- a/web-cotefe-net/templates/tableModel.ejs
+++ b/web-cotefe-net/templates/tableModel.ejs
@@ -13,7 +13,15 @@
 				for(i=0; i<len; i++) {%>
 					<tr>
 						<td><%= objects[i].name %></td>
+						<%
+							if(objects[i].project != undefined)
+							{
+								
+								%><td><%= objects[i].project.name %></td><%
+							}
+						%>
 						<td><%= objects[i].datetime_created %></td>
+						
 						<td><a href="<%= objects[i].uri %>" class="edit"  >Edit</a></td>
 						<td><a href="<%= objects[i].uri %>" class="delete"  >Delete</a></td>
 					</tr>
