--- a/web-cotefe-net/templates/experimentNew.ejs
+++ b/web-cotefe-net/templates/experimentNew.ejs
@@ -10,7 +10,7 @@
         </p>
          <p>
                             <label for="selectbox">Project </label>
-                            <select name="project" id="selectbox" >
+                            <select name="project_id" id="selectbox" >
                                     <option value="">Choose a Project</option>
                                     <% if(projects != null){
                                     	for(i=0; i<projects.length; i++) { 
