header corrected for platforms

--- a/web-cotefe-net/templates/tableExplore.ejs
+++ b/web-cotefe-net/templates/tableExplore.ejs
@@ -1,5 +1,5 @@
 <div class="wrap">					
-	<div class="headings"><h1><span>TestBeds</span></h1></div>
+	<div class="headings"><h1><span><%= head %></span></h1></div>
 	<div class="detaildiv">
 		<table class="shadow-dark" id="testbed" >
 				<tr>
