--- a/web-cotefe-net/templates/tableModelex.ejs
+++ b/web-cotefe-net/templates/tableModelex.ejs
@@ -12,8 +12,14 @@
 				
 				for(i=0; i<len; i++) {%>
 					<tr>
-						<td><%= objects[i].name %></td>
-						
+						<td><a href="<%=objects[i].uri%>" class="experimentResource"><%= objects[i].name %></a></td>
+						<%
+							if(objects[i].project != undefined)
+							{
+								
+								%><td><%= objects[i].project.name %></td><%
+							}
+						%>
 						<td><%= objects[i].datetime_created %></td>
 						
 						<td><a href="<%= objects[i].uri %>" class="edit"  >Edit</a></td>
