update before EWSN 2012 demo session

--- a/api-cotefe-net/templates/base.html
+++ b/api-cotefe-net/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href='http://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/cotefe.css">
     {% block script %}{% endblock %}
     <title>COTEFE - {% block title %}{% endblock %}</title>    
@@ -14,7 +14,7 @@
     <div id="header">
 
         <h1>COTEFE</h1>
-        <h2>Design experiments in a testbed-indepent way. Run your experiments and cross-validate your results across multiple testbeds. All in your Web browser.</h2>
+        <h2>Design experiments in a testbed-independent way. Run your experiments and cross-validate your results across multiple testbeds. All in your Web browser.</h2>
     
     </div>
     
