--- a/web-cotefe-net/css/stylesheet.css
+++ b/web-cotefe-net/css/stylesheet.css
@@ -44,8 +44,8 @@ border-bottom-right-radius: 10px;}
 	-moz-border-radius-bottomleft: 10px;
 border-bottom-left-radius: 10px;
 }
-.alertFail{position:absolute;top:0px;left:300px;display:block;background-color:#ff0000;}
-.alertSuccess{position:absolute;top:0px;left:300px;display:block;background-color:#00ff00;}
+.alertFail{position:absolute;top:0px;left:300px;display:block;background-color:#cc0000;border: 1px solid #ff0000;}
+.alertSuccess{position:absolute;top:0px;left:300px;display:block;background-color:#ccff00;border: 1px solid #00ff00;}
 .alertSuccess span,.alertFail{display:block;padding:10px;}
 
 #header{position:relative;}
