--- a/api-cotefe-net/templates/base.html
+++ b/api-cotefe-net/templates/base.html
@@ -38,7 +38,7 @@
         
             {% if user %}
     
-            <a href="/account">Account</a> | <a href="/identities">My Identities</a> | <a href="/sessions">Authorized Apps</a> | <a href="/applications">My Apps</a> |
+            <a href="/account">Account</a> | <a href="/identities">My Identities</a> | <a href="/sessions">My Sessions</a> | <a href="/applications">My Apps</a> |
             
             {% endif %}
             
